--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
       <artifactId>CustomActiveMQData</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+      <dependency>
+          <groupId>org.apache.activemq</groupId>
+          <artifactId>activemq-jaas</artifactId>
+          <version>5.15.11</version>
+      </dependency>
+
   </dependencies>
 
   <build>
