Added token and discussion id to api call.

--- a/src/main/resources/plugin.properties
+++ b/src/main/resources/plugin.properties
@@ -1,1 +1,2 @@
 authentication.api.url=https://www.tronalddump.io/random/quote
+mn.canRead.api.url=http://localhost:8081/resource/discussion/{discussionId}/canRead
