Successfully connected authentication plugin with MN. Implemented MN service.

--- a/src/test/resources/plugin.properties
+++ b/src/test/resources/plugin.properties
@@ -1,1 +1,5 @@
 authentication.api.url=https://www.tronalddump.io/random/quote
+
+# membernet
+mn.user.details.api.url=http://localhost:8080/rest/resource/user/me
+mn.canRead.api.url=http://localhost:8080/rest/resource/discussion/{discussionId}/canRead
