--- a/src/main/resources/plugin.properties
+++ b/src/main/resources/plugin.properties
@@ -1,2 +1,5 @@
 authentication.api.url=https://www.tronalddump.io/random/quote
-mn.canRead.api.url=http://localhost:8081/resource/discussion/{discussionId}/canRead
+
+# membernet
+mn.user.details.api.url=http://localhost:8080/rest/resource/user/me
+mn.canRead.api.url=http://localhost:8080/rest/resource/discussion/{discussionId}/canRead
