Better authentication mechanism for publisher.

--- a/src/main/resources/plugin.properties
+++ b/src/main/resources/plugin.properties
@@ -1,5 +1,10 @@
 authentication.api.url=https://www.tronalddump.io/random/quote
 
+# chat microapp credentials, essentially used by
+# the publisher object there
+microapp.chat.username=chat-publisher
+microapp.chat.password=chat-publisher
+
 # membernet
 mn.user.details.api.url=http://localhost:8080/rest/resource/user/me
 mn.canRead.api.url=http://localhost:8080/rest/resource/discussion/{discussionId}/canRead
